unpackaged/main/default/objects/Account/fields/DisneyGuestPass__c.field-meta.xml
<CustomField>
    <fullName>DisneyGuestPass__c</fullName>
    <label>DisneyGuestPass</label>
    <length>16</length>
    <type>Text</type>
</CustomField>