unpackaged/main/default/objects/Account/fields/PipelinesCustomField__c.field-meta.xml
<CustomField>
    <fullName>PipelinesCustomField__c</fullName>
    <label>PipelinesCustomField</label>
    <length>16</length>
    <type>Text</type>
</CustomField>