unpackaged/main/default/objects/Account/fields/PipelinesNewFeature2__c.field-meta.xml
<CustomField>
    <fullName>PipelinesNewFeature2__c</fullName>
    <label>PipelinesNewFeature2</label>
    <length>16</length>
    <type>Text</type>
</CustomField>