unpackaged/main/default/objects/Account/fields/TestPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>TestPhoneNumber__c</fullName>
    <description>For demo testing</description>
    <label>TestPhoneNumber</label>
    <type>Phone</type>
</CustomField>