unpackaged/main/default/objects/Account/fields/VIPMemberStatus__c.field-meta.xml
<CustomField>
    <fullName>VIPMemberStatus__c</fullName>
    <label>VIPMemberStatus</label>
    <length>20</length>
    <type>Text</type>
</CustomField>